--- a/src/main/resources/templates/product/add.html
+++ b/src/main/resources/templates/product/add.html
@@ -18,14 +18,14 @@
 </head>
 <body>
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-    <legend>商品</legend>
+    <legend>产品</legend>
 </fieldset>
 <form class="layui-form" action="" th:object="${productDO}">
     <input type="hidden" th:field="*{productId}"/>
     <input type="hidden" th:field="*{productStockId}"/>
 
     <div class="layui-form-item">
-        <label class="layui-form-label">商品类型</label>
+        <label class="layui-form-label">产品类型</label>
         <div class="layui-input-block">
             <select name="productTypeId">
                 <option th:each="list,userStat:${productTypeList}" th:value="${list.id}" th:text="${list.name}"
@@ -34,9 +34,9 @@
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">商品名称</label>
+        <label class="layui-form-label">产品名称</label>
         <div class="layui-input-block">
-            <input type="text" name="name" th:field="*{name}" autocomplete="off" placeholder="商品名称" class="layui-input">
+            <input type="text" name="name" th:field="*{name}" autocomplete="off" placeholder="产品名称" class="layui-input">
         </div>
     </div>
 
