--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" th:href="@{/css/font.css}">
     <link rel="stylesheet" th:href="@{/css/xadmin.css}">
     <link rel="stylesheet" th:href="@{/lib/layui/css/layui.css}">
-    <script th:src="@{/productType/list.js}"></script>
+    <script th:src="@{/product/list.js}"></script>
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
         ctxPath = /*[[@{/}]]*/ '';
