--- a/src/main/resources/templates/productType/list.html
+++ b/src/main/resources/templates/productType/list.html
@@ -30,7 +30,7 @@
     </div>
 </div>
 <xblock>
-    <button class="layui-btn"  onclick="x_admin_show('新增配送方式','productType/toAdd',800,600)">新增</button>
+    <button class="layui-btn"  onclick="x_admin_show('新增配送方式','lacaProductType/toAdd',800,600)">新增</button>
 </xblock>
 <table class="layui-hide" id="LAY_table_productType" lay-filter="productType" ></table>
 </body>
