--- a/src/main/resources/templates/product/add.html
+++ b/src/main/resources/templates/product/add.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-    <legend>产品</legend>
+    <legend>产品信息</legend>
 </fieldset>
 <form class="layui-form" action="" th:object="${productDO}">
     <input type="hidden" th:field="*{productId}"/>
@@ -36,7 +36,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">产品名称</label>
         <div class="layui-input-block">
-            <input type="text" name="name" th:field="*{name}" autocomplete="off" placeholder="产品名称" class="layui-input">
+            <input type="text" name="productName" th:field="*{productName}" autocomplete="off" placeholder="产品名称" class="layui-input">
         </div>
     </div>
 
