--- a/src/main/resources/templates/product/add.html
+++ b/src/main/resources/templates/product/add.html
@@ -14,7 +14,7 @@
         ctxPath = /*[[@{/}]]*/ '';
         /*]]>*/
     </script>
-    <script th:src="@{/productType/add.js}"></script>
+    <script th:src="@{/product/add.js}"></script>
 </head>
 <body>
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
