--- a/src/main/resources/templates/order/selectCustomerInfo.html
+++ b/src/main/resources/templates/order/selectCustomerInfo.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" th:href="@{/css/xadmin.css}">
     <link rel="stylesheet" th:href="@{/lib/layui/css/layui.css}">
     <script th:src="@{/order/selectCustomerInfo.js}"></script>
+    <script th:src="@{/order/add.js}"></script>
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
         ctxPath = /*[[@{/}]]*/ '';
