--- a/src/main/resources/templates/order/add.html
+++ b/src/main/resources/templates/order/add.html
@@ -84,7 +84,7 @@
         <div class="layui-inline">
             <label class="layui-form-label">用店费</label>
             <div class="layui-input-inline">
-                <input type="text" name="userShopFee" th:field="*{userShopFee}" autocomplete="off" class="layui-input" lay-verify="number">
+                <input type="text" name="userShopFee" th:field="*{userShopFee}" autocomplete="off" class="layui-input">
             </div>
         </div>
     </div>
@@ -93,13 +93,13 @@
         <div class="layui-inline">
             <label class="layui-form-label">现金</label>
             <div class="layui-input-inline">
-                <input type="text" name="cashPayPrice" th:field="*{cashPayPrice}" autocomplete="off" class="layui-input" lay-verify="number">
+                <input type="text" name="cashPayPrice" th:field="*{cashPayPrice}" autocomplete="off" class="layui-input" >
             </div>
         </div>
         <div class="layui-inline">
             <label class="layui-form-label">刷卡</label>
             <div class="layui-input-inline">
-                <input type="text" name="cardPayPrice" th:field="*{cardPayPrice}" autocomplete="off" class="layui-input" lay-verify="number">
+                <input type="text" name="cardPayPrice" th:field="*{cardPayPrice}" autocomplete="off" class="layui-input" >
             </div>
         </div>
     </div>
@@ -108,13 +108,13 @@
         <div class="layui-inline">
             <label class="layui-form-label">微信</label>
             <div class="layui-input-inline">
-                <input type="text" name="wxPayPrice" th:field="*{wxPayPrice}" autocomplete="off" class="layui-input" lay-verify="number">
+                <input type="text" name="wxPayPrice" th:field="*{wxPayPrice}" autocomplete="off" class="layui-input" >
             </div>
         </div>
         <div class="layui-inline">
             <label class="layui-form-label">支付宝</label>
             <div class="layui-input-inline">
-                <input type="text" name="customerName" th:field="*{alipayPayPrice}" autocomplete="off" class="layui-input" lay-verify="number">
+                <input type="text" name="alipayPayPrice" th:field="*{alipayPayPrice}" autocomplete="off" class="layui-input" >
             </div>
         </div>
     </div>
@@ -124,7 +124,7 @@
         <div class="layui-inline">
             <label class="layui-form-label">总金额</label>
             <div class="layui-input-inline">
-                <input type="text" name="totalPrice" th:field="*{totalPrice}" autocomplete="off" class="layui-input" lay-verify="number">
+                <input type="text" name="totalPrice" th:field="*{totalPrice}" autocomplete="off" class="layui-input" >
             </div>
         </div>
     </div>
@@ -159,8 +159,8 @@
     <div class="layui-form-item layui-form-text">
         <label class="layui-form-label">关联订单</label>
         <div class="layui-input-block">
-            <input type="hidden" name="innerOrderId"/>
-            <input type="button" onclick="selectCustomerInfo()"/>
+            <input type="text" name="innerOrderId" id="innerOrderId" />
+            <input type="button" onclick="selectCustomerInfo()" value="选择"/>
         </div>
     </div>
 
@@ -172,5 +172,24 @@
         </div>
     </div>
 </form>
+<div id="dialog" style="display: none;">
+    <div class="customerOrderTable">
+        <div class="layui-row">
+            <div class="layui-col-md12 x-so">
+                <label class="layui-col-md3 layui-col-lg-offset1">
+                    <span>客户名称:</span>
+                    <input type="text" id="customerName" name="customerName"  placeholder="客户名称" autocomplete="off" class="layui-input">
+                </label>
+                <button style="margin-right: 10px;" class="layui-btn" data-type="reload"><i class="layui-icon">&#xe615;</i></button>
+            </div>
+        </div>
+    </div>
+    <table class="layui-hide" id="LAY_table_customerOrderInfo" lay-filter="customerOrder" ></table>
+
+
+</div>
+
 </body>
+
+
 </html>
