--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -21,11 +21,11 @@
 <div class="productOrderTable">
     <div class="layui-row">
         <div class="layui-col-md12 x-so">
-            <label class="layui-col-md3 layui-col-lg-offset1">
+            <label class="layui-col-md3 ">
                 <span>产品名称:</span>
                 <input type="text" id="name" name="name"  placeholder="请输入产品名称" autocomplete="off" class="layui-input">
             </label>
-            <button style="margin-right: 10px;" class="layui-btn" data-type="reload"><i class="layui-icon">&#xe615;</i></button>
+            <button  class="layui-btn" data-type="reload"><i class="layui-icon">&#xe615;</i></button>
         </div>
     </div>
 </div>
