--- a/src/main/resources/templates/order/add.html
+++ b/src/main/resources/templates/order/add.html
@@ -26,9 +26,9 @@
     <div class="layui-form-item">
         <label class="layui-form-label">订单类型</label>
         <div class="layui-inline">
-            <select name="saleType" lay-verify="required">
-                <option value="1">进</option>
-                <option value="2">出</option>
+            <select name="saleType" lay-verify="required" >
+                <option value="1" th:selected="${'1'==saleType}">进</option>
+                <option value="2" th:selected="${'2'==saleType}">出</option>
             </select>
         </div>
     </div>
