--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -21,34 +21,34 @@
 <div class="productOrderTable">
     <div class="layui-row">
         <div class="layui-col-md12 x-so">
-            <label class="layui-col-md4 ">
+            <label class="layui-col-md3 layui-col-lg-offset1">
                 <span>产品名称:</span>
                 <input type="text" id="productName" name="productName"   autocomplete="off" class="layui-input">
             </label>
 
-            <label class="layui-col-md4 ">
+            <label class="layui-col-md3 ">
                 <span>类型:</span>
-                <select name="saleType" id="saleType">
-                    <option>请选择</option>
+                <select name="saleType" id="saleType" style="width: 150px">
+                    <option value="">请选择</option>
                     <option value="1">进</option>
                     <option value="2">出</option>
                 </select>
             </label>
 
-            <label class="layui-col-md4 ">
+            <label class="layui-col-md3 ">
                 <span>加盟商:</span>
                 <input type="text" id="joinShop" name="joinShop"  autocomplete="off" class="layui-input">
             </label>
 
-            <button  class="layui-btn" data-type="reload"><i class="layui-icon">&#xe615;</i></button>
+            <button  class="layui-btn " data-type="reload"><i class="layui-icon">&#xe615;</i></button>
         </div>
         <div class="layui-col-md12 x-so">
-            <label class="layui-col-md4 ">
+            <label class="layui-col-md3 layui-col-lg-offset1">
                 <span>客户姓名:</span>
                 <input type="text" id="customerName" name="customerName"  autocomplete="off" class="layui-input">
             </label>
 
-            <label class="layui-col-md4 ">
+            <label class="layui-col-md3 ">
                 <span>设计师:</span>
                 <input type="text" id="designer" name="designer"  autocomplete="off" class="layui-input">
             </label>
