--- a/src/main/resources/templates/order/add.html
+++ b/src/main/resources/templates/order/add.html
@@ -28,8 +28,8 @@
         <label class="layui-form-label">订单类型</label>
         <div class="layui-inline">
             <select name="saleType" lay-verify="required" >
-                <option value="1" th:selected="${'1'==saleType}">进</option>
-                <option value="2" th:selected="${'2'==saleType}">出</option>
+                <option value="1" th:selected="${1==orderDO.saleType}">进</option>
+                <option value="2" th:selected="${2==orderDO.saleType}">出</option>
             </select>
         </div>
     </div>
@@ -40,7 +40,8 @@
             <div class="layui-inline">
                 <label class="layui-form-label">产品信息</label>
                 <div class="layui-input-block">
-                    <select id="productId_1" name="productId_1" lay-verify="required">
+                    <select id="productId_1" name="productId_1" lay-verify="required">、
+                        <option value="">请选择</option>
                         <option th:each="list,userStat:${lacaProductList}" th:value="${list.id}" th:text="${list.productName}"></option>
                     </select>
                 </div>
@@ -73,7 +74,7 @@
         <div class="layui-inline">
             <label class="layui-form-label">客户姓名</label>
             <div class="layui-input-inline">
-                <input type="text" name="customerName" th:field="*{customerName}" autocomplete="off" class="layui-input">
+                <input type="text" name="customerName" th:field="*{customerName}" autocomplete="off" class="layui-input" lay-verify="required">
             </div>
         </div>
     </div>
@@ -144,12 +145,25 @@
         </div>
     </div>
 
-    <div class="layui-form-item">
+    <div class="layui-form-item" th:if="${exsitOrder==0}">
         <label class="layui-form-label">状态</label>
         <div class="layui-input-block">
             <select name="status" lay-verify="required">
-                <option value="1">借货</option>
-                <option value="2">还货</option>
+                <option value="">请选择</option>
+                <option value="1" th:selected="${orderDO.status=='1'}">借货</option>
+                <option value="2" th:selected="${orderDO.status=='2'}">还货</option>
+            </select>
+        </div>
+    </div>
+
+    <div class="layui-form-item" th:if="${exsitOrder>0}">
+        <label class="layui-form-label">状态</label>
+        <div class="layui-input-block">
+            <select name="status" lay-verify="required">
+                <option value="">请选择</option>
+                <option value="1" th:selected="${orderDO.status=='1'}">借货</option>
+                <option value="2" th:selected="${orderDO.status=='2'}">还货</option>
+                <option value="3" th:selected="${orderDO.status=='3'}">已完成</option>
             </select>
         </div>
     </div>
