--- a/src/main/resources/templates/order/add.html
+++ b/src/main/resources/templates/order/add.html
@@ -28,8 +28,9 @@
         <label class="layui-form-label">订单类型</label>
         <div class="layui-inline">
             <select name="saleType" lay-verify="required" >
-                <option value="1" th:selected="${1==orderDO.saleType}">进</option>
+                <option value="">请选择</option>
                 <option value="2" th:selected="${2==orderDO.saleType}">出</option>
+                <option value="1" th:selected="${1==orderDO.saleType}">进</option>
             </select>
         </div>
     </div>
@@ -197,7 +198,7 @@
             <div class="layui-col-md12 x-so">
                 <label class="layui-col-md3 layui-col-lg-offset1">
                     <span>客户名称:</span>
-                    <input type="text" id="customerName" name="customerName"  placeholder="客户名称" autocomplete="off" class="layui-input">
+                    <input type="text" id="customerNameDialog" name="customerName"  placeholder="客户名称" autocomplete="off" class="layui-input">
                 </label>
                 <button style="margin-right: 10px;" class="layui-btn" data-type="reload"><i class="layui-icon">&#xe615;</i></button>
             </div>
