--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -52,6 +52,13 @@
                 <span>设计师:</span>
                 <input type="text" id="designer" name="designer"  autocomplete="off" class="layui-input">
             </label>
+
+
+            <label class="layui-form-label">订单时间
+                 <input type="text" class="layui-input" id="beginDate" placeholder="yyyy-MM-dd" th:value="${beginDate}"/>--
+                 <input type="text" class="layui-input" id="endDate" placeholder="yyyy-MM-dd" th:value="${endDate}"/>
+            </label>
+            </label>
         </div>
     </div>
 </div>
