--- a/src/main/resources/templates/order/add.html
+++ b/src/main/resources/templates/order/add.html
@@ -49,6 +49,7 @@
             </div>
 
             <div class="layui-inline">
+                <label class="layui-form-label">产品名称</label>
                 <div class="layui-input-block">
                     <select id="productId_1" name="productId_1" lay-verify="required">
                         <option value="">请选择</option>
